# simple-term

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  packit.yml  simple-term.spec  simple-term.vala
debian/: changelog  control  copyright  postinst  prerm  rules
